--- a/Source/Installer/HeBianGu.Installer.Default/Views/FinishPage.xaml
+++ b/Source/Installer/HeBianGu.Installer.Default/Views/FinishPage.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:HeBianGu.Installer.Default.Views"
+             xmlns:h="QQ:908293466"
              d:DesignHeight="580" d:DesignWidth="800"
              mc:Ignorable="d" FontSize="14">
     <Grid>
@@ -12,23 +13,23 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <DockPanel  TextBlock.Foreground="{DynamicResource S.Brush.TextForeground.White}" VerticalAlignment="Center">
+        <DockPanel TextBlock.Foreground="{DynamicResource {x:Static h:BrushKeys.ForegroundWhite}}" VerticalAlignment="Center">
             <UniformGrid Columns="1"  DockPanel.Dock="Bottom">
-                <TextBlock  FontSize="{DynamicResource S.FontSize.Header.1}" HorizontalAlignment="Center">
-                    <Run Text="安装成功"/>
+                <TextBlock  FontSize="{DynamicResource {x:Static h:FontSizeKeys.Header1}}" HorizontalAlignment="Center">
+                    <Run Text="操作成功"/>
                 </TextBlock>
                 <TextBlock
-                   FontSize="{DynamicResource S.FontSize.Header.4}" HorizontalAlignment="Center">
+                   FontSize="{DynamicResource {x:Static h:FontSizeKeys.Header4}}" HorizontalAlignment="Center">
                     <Run Text="轻松上手，极致体验"/> 
                 </TextBlock>
             </UniformGrid>
 
-            <TextBlock Style="{DynamicResource S.TextBlock.FIcon}"  Text="&#xe858;" FontSize="105"/>
+            <TextBlock Style="{DynamicResource {x:Static h:TextBlockKeys.Icon}}"  Text="&#xe858;" FontSize="105"/>
 
         </DockPanel>
 
-        <Border Background="{DynamicResource S.Brush.TextBackground.Default}" Grid.Row="1" Margin="-3" CornerRadius="{DynamicResource S.Window.Item.CornerRadius.Bottom}">
-            <Button Grid.Row="1" Content="完成" Width="200" Height="45" FontSize="{DynamicResource S.FontSize.Header.2}" 
+        <Border Background="{DynamicResource {x:Static h:BrushKeys.BackgroundDefault}}" Grid.Row="1" Margin="-3" CornerRadius="{DynamicResource {x:Static h:CornerRadiusKeys.Bottom}}">
+            <Button Grid.Row="1" Style="{DynamicResource {x:Static h:ButtonKeys.Accent}}" Content="完成" Width="200" Height="45" FontSize="{DynamicResource {x:Static h:FontSizeKeys.Header2}}" 
                     Command="{Binding btn_close}"/>
         </Border>
     </Grid>
