--- a/Source/Installer/HeBianGu.Installer.Default/Views/UnistallRepairPage.xaml
+++ b/Source/Installer/HeBianGu.Installer.Default/Views/UnistallRepairPage.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:HeBianGu.Installer.Default.Views"
              xmlns:loc="clr-namespace:HeBianGu.Installer.Default"
+             xmlns:h="QQ:908293466"
              d:DesignHeight="580" d:DesignWidth="800"
              mc:Ignorable="d" FontSize="14">
     <!--<UserControl.Resources>
@@ -20,28 +21,28 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <DockPanel  TextBlock.Foreground="{DynamicResource S.Brush.TextForeground.White}" VerticalAlignment="Center">
+        <DockPanel  TextBlock.Foreground="{DynamicResource {x:Static h:BrushKeys.ForegroundWhite}}" VerticalAlignment="Center">
             <UniformGrid Columns="1"  DockPanel.Dock="Bottom">
-                <TextBlock  FontSize="{DynamicResource S.FontSize.Header.1}" HorizontalAlignment="Center">
+                <TextBlock  FontSize="{DynamicResource {x:Static h:FontSizeKeys.Header1}}" HorizontalAlignment="Center">
                     <Run Text="是否要卸载"/>
                     <Run Text="{DynamicResource ProductName}"/>
                     <Run Text="?"/>
                 </TextBlock>
                 <TextBlock
-                   FontSize="{DynamicResource S.FontSize.Header.4}" HorizontalAlignment="Center">
+                   FontSize="{DynamicResource {x:Static h:FontSizeKeys.Header4}}" HorizontalAlignment="Center">
             <Run Text="如果需要帮助，可以联系我们的客服"/>
              <Run Text="{Binding Source={x:Static loc:InstallerConfig.Instance},Path=Contract}"/>
                 </TextBlock>
             </UniformGrid>
 
-            <TextBlock Style="{DynamicResource S.TextBlock.FIcon}"  Text="&#xe844;" FontSize="105"/>
+            <TextBlock Style="{DynamicResource {x:Static h:TextBlockKeys.Icon}}"  Text="&#xe844;" FontSize="105"/>
 
         </DockPanel>
         
-        <Border Background="{DynamicResource S.Brush.TextBackground.Default}" Grid.Row="1" Margin="-3" CornerRadius="{DynamicResource S.Window.Item.CornerRadius.Bottom}">
+        <Border Background="{DynamicResource {x:Static h:BrushKeys.BackgroundDefault}}" Grid.Row="1" Margin="-3" CornerRadius="{DynamicResource {x:Static h:CornerRadiusKeys.Bottom}}">
             <WrapPanel Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="30 0 30 0">
-                <Button Content="修复" Command="{Binding btn_repair}"/>
-                <Button Content="卸载" Command="{Binding btn_uninstall}"/>
+                <Button Content="修复" Style="{DynamicResource {x:Static h:ButtonKeys.Accent}}" Command="{Binding btn_repair}"/>
+                <Button Content="卸载" Style="{DynamicResource {x:Static h:ButtonKeys.Accent}}" Command="{Binding btn_uninstall}"/>
             </WrapPanel>
         </Border>
     </Grid>
